tail-sampling/collector/service-account.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: observability
