tail-sampling/collector/ingress-routes.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: otel-http-ingress
  namespace: observability
spec:
  entryPoints:
    - otlp-http
  routes:
    - match: PathPrefix(`/v1/traces`)
      kind: Rule
      services:
        - name: loadbalancing-collector-headless
          port: 4318
